--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "react-native-ut",
   "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "expo": "^21.0.2",
+    "react": "16.0.0",
+    "react-native": "^0.49.3"
+  },
   "devDependencies": {
-    "react-native-scripts": "1.5.0",
-    "jest-expo": "^21.0.2",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "babel-jest": "^21.2.0",
+    "babel-preset-react-native": "^4.0.0",
+    "enzyme": "^3.1.0",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
+    "jest-react-native": "^18.0.0",
+    "react-test-renderer": "^16.0.0",
+    "jest-expo": "^21.0.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -13,14 +23,9 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "jest --watch"
   },
   "jest": {
     "preset": "jest-expo"
-  },
-  "dependencies": {
-    "expo": "^21.0.2",
-    "react": "16.0.0",
-    "react-native": "^0.49.3"
   }
 }
