--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "expo": "^21.0.2",
     "react": "16.0.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "react-native": "^0.49.3"
   },
   "devDependencies": {
+    "react-native-scripts": "^1.5.0",
     "babel-jest": "^21.2.0",
     "babel-preset-react-native": "^4.0.0",
     "enzyme": "^3.1.0",
