--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "16.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "react-native": "^0.49.3"
+    "react-native": "^0.48.4",
+    "react-prop-types":"^0.4.0"
   },
   "devDependencies": {
     "react-native-scripts": "^1.5.0",
